# Kaze_MLOps_stack

./: .devcontainer.json  .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docker/: Dockerfile.cuda
src/kazemlstack/cli/: train_vit_cifar.py
src/kazemlstack/data/: cifar.py
src/kazemlstack/dataset/: cifar.py
src/kazemlstack/model/: ViT.py
src/kmls/cli/: train_vit_cifar.py
