[project]
name = "kaze-mlops-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bentoml>=1.4.8",
    "dagster>=1.10.10",
    "jax-ai-stack[grain]==2025.4.9",
    "minio>=7.2.15",
    "mlflow>=2.21.3",
]

[dependency-groups]
dev = [
    "ipython>=9.1.0",
    "pytest>=8.3.5",
]
